--- a/display-exercise.html
+++ b/display-exercise.html
@@ -18,5 +18,12 @@
 <body>
 <!-- your HTML here to implement the colored box design -->
 	<p>Placeholder!</p>
+  <div class = 'container'>
+    <div class='inner green'></div>
+    <div class='inner blue'></div>
+    <div class='bottom grey'></div>
+    <div class='bottom black'></div>
+    <div class='bottom orange'></div>
+  </div>
 </body>
 </html>
